# hector_pose_prediction_interface

./: LICENSE  README.md
hector_pose_prediction_interface/: CMakeLists.txt  package.xml
hector_pose_prediction_interface/include/hector_pose_prediction_interface/: contact_information.h  pose_predictor.h  robot_model.h  types.h
hector_pose_prediction_interface/include/hector_pose_prediction_interface/message_conversions/: pose.h  robot_model.h
hector_pose_prediction_interface/test/: all_tests.test  test_pose.cpp  test_pose.test
hector_pose_prediction_ros/: CMakeLists.txt  package.xml
hector_pose_prediction_ros/include/hector_pose_prediction_ros/: visualization.h
