<?xml version="1.0"?>
<package format="2">
  <name>hector_pose_prediction_interface</name>
  <version>0.1.0</version>
  <description>The hector_pose_prediction_interface package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>
  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_stability_metrics</build_depend>
  <build_depend>hector_math</build_depend>
  <build_export_depend>hector_stability_metrics</build_export_depend>
  <build_export_depend>hector_math</build_export_depend>
</package>
