<?xml version="1.0"?>
<package format="2">
  <name>hector_pose_prediction_ros</name>
  <version>0.0.0</version>
  <description>ROS functionality related to the hector_pose_prediction_interface.</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_pose_prediction_interface</build_depend>
  <build_export_depend>hector_pose_prediction_interface</build_export_depend>
  <build_depend>hector_math</build_depend>
  <build_export_depend>hector_math</build_export_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_depend>hector_math_ros</build_depend>
  <build_export_depend>hector_math_ros</build_export_depend>
</package>
